// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders disabled 1`] = `
<DocumentFragment>
  <div
    aria-disabled="true"
    class="pf-v6-c-tile pf-m-disabled"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders selected 1`] = `
<DocumentFragment>
  <div
    aria-selected="true"
    class="pf-v6-c-tile pf-m-selected"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders with icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
          />
        </svg>
      </div>
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders with stacked icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header pf-m-stacked"
    >
      <div
        class="pf-v6-c-tile__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
          />
        </svg>
      </div>
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders with stacked large icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile pf-m-display-lg"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header pf-m-stacked"
    >
      <div
        class="pf-v6-c-tile__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
          />
        </svg>
      </div>
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders with subtext 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
    <div
      class="pf-v6-c-tile__body"
    >
      test subtext
    </div>
  </div>
</DocumentFragment>
`;
